# c-fun

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  list_node.c  list_node.h
src/linked_list/: CMakeLists.txt  list_node.h
test/: CMakeLists.txt  test_list_node.c
